k4s-app-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domainsale-deployment-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: domainsale-app-v2
  template:
    metadata:
      labels:
        app: domainsale-app-v2
    spec:
      containers:
      - name: domainsale-app-v2
        imagePullPolicy: Always
        image: k4sartifacts.azurecr.io/domainsale:v2
