k4s-app-v1-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: domainsale-svc-v1
spec:
  selector:
    app: domainsale-app-v1
  type: LoadBalancer
  ports:
  - name: https
    protocol: TCP
    port: 8080
    targetPort: 443
