k4s-app-v2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: domainsale-svc-v2
spec:
  selector:
    app: domainsale-app-v2
  type: LoadBalancer
  ports:
  - name: https
    protocol: TCP
    port: 5001
    targetPort: 443
